<resources>
    <!-- Labels -->
    <string name="app_name">Retrofit for Github</string>
    <string name="label_info">User Info</string>
    <string name="label_repo">User Repositories</string>
    <string name="label_web">Repository: %1$s</string>

    <!-- Info text -->
    <string name="text_enter_username">Please enter GitHub username</string>
    <string name="hint_username">username</string>
    <string name="btn_login">login</string>
    <string name="text_no_info">no info</string>
    <string name="text_no_repo">no repositories</string>
    <string name="text_repo_count">repositories: %1$s</string>
    <string name="text_check_internet">Check internet connection</string>

    <!-- Categories user -->
    <string name="cat_username">Username:</string>
    <string name="cat_full_name">Full name:</string>
    <string name="cat_company">Company:</string>
    <string name="cat_location">Location:</string>
    <string name="cat_email">Email:</string>
    <string name="cat_about">About:</string>
    <string name="cat_repos">Repositories:</string>
    <string name="cat_gists">Gists:</string>
    <string name="cat_followers">Followers:</string>
    <string name="cat_following">Following:</string>
    <string name="cat_created">Created:</string>

    <!-- Categories repo -->
    <string name="cat_name">Name:</string>
    <string name="cat_description">Description:</string>
    <string name="cat_language">Language:</string>

    <!-- Error Codes -->
    <string name="error_403">Access forbidden</string>
    <string name="error_404">User not found</string>
    <string name="error_500">Internal server error</string>
    <string name="error_503">Service unavailable</string>
    <string name="error_504">Gateway timeout</string>
</resources>